welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:5: error: ';' expected but '=' found.
		Var Nbb:Int = 0
                            ^